# modelretrieval-1-subtask-a

./: .gitignore  README.md  main.py  pyproject.toml
data/: ground-truth.csv  models.csv  tasks.csv
data/task-data/train-tasks/1001/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1002/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1003/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1004/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1005/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1006/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1007/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1008/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1009/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1010/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1011/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1012/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1013/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1014/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1015/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1016/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1017/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1018/: test.jsonl  train.jsonl  val.jsonl
data/task-data/train-tasks/1019/: test.jsonl  val.jsonl  (+1 more)
notebooks/: baseline-avg-ranking.ipynb
utils/: __init__.py
(+243 files in other folders)
